refatora estrutura de componentes e interfaces, adiciona validações e melhorias na UI

--- a/frontend/estudaia/src/app/pages/criar-questao/criar-questao.component.html
+++ b/frontend/estudaia/src/app/pages/criar-questao/criar-questao.component.html
@@ -1,63 +1,91 @@
-<ion-header>
-<ion-toolbar color="primary">
-<ion-title>Criar Questão</ion-title>
-</ion-toolbar>
+<ion-header [translucent]="true">
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Criar Questão</ion-title>
+  </ion-toolbar>
 </ion-header>
 
+<ion-content [fullscreen]="true">
+  <form (ngSubmit)="salvar()" class="form-container">
+    <!-- Enunciado -->
+    <ion-item>
+      <ion-label position="stacked">Enunciado</ion-label>
+      <ion-textarea 
+        [(ngModel)]="questao.enunciado" 
+        name="enunciado" 
+        required
+        rows="4"
+        placeholder="Digite o enunciado da questão...">
+      </ion-textarea>
+    </ion-item>
 
-<ion-content>
-<form (ngSubmit)="salvar()">
+    <!-- Disciplina -->
+    <ion-item>
+      <ion-label position="stacked">Disciplina</ion-label>
+      <ion-input 
+        [(ngModel)]="questao.disciplinaNome" 
+        name="disciplinaNome" 
+        required
+        placeholder="Ex: Matemática, Português...">
+      </ion-input>
+    </ion-item>
 
+    <!-- Ano -->
+    <ion-item>
+      <ion-label position="stacked">Ano</ion-label>
+      <ion-input 
+        type="number" 
+        [(ngModel)]="questao.ano" 
+        name="ano"
+        placeholder="Ex: 2024">
+      </ion-input>
+    </ion-item>
 
-<ion-item>
-<ion-label position="floating">Enunciado</ion-label>
-<ion-textarea [(ngModel)]="questao.enunciado" name="enunciado"></ion-textarea>
-</ion-item>
+    <!-- Dificuldade -->
+    <ion-item>
+      <ion-label>Nível de Dificuldade</ion-label>
+      <ion-select [(ngModel)]="questao.nivelDificuldade" name="nivelDificuldade" required>
+        <ion-select-option value="FACIL">Fácil</ion-select-option>
+        <ion-select-option value="MEDIO">Médio</ion-select-option>
+        <ion-select-option value="DIFICIL">Difícil</ion-select-option>
+      </ion-select>
+    </ion-item>
 
+    <!-- Alternativas -->
+    <ion-list-header>
+      <ion-label>Alternativas</ion-label>
+    </ion-list-header>
 
-<ion-list>
-<ion-list-header>
-<ion-label>Alternativas</ion-label>
-</ion-list-header>
+    <div *ngFor="let alt of questao.alternativas; let i = index" class="alternativa-item">
+      <ion-item>
+        <ion-label position="stacked">Alternativa {{i + 1}}</ion-label>
+        <ion-textarea 
+          [(ngModel)]="questao.alternativas[i].texto" 
+          [name]="'alt' + i" 
+          required
+          rows="2"
+          placeholder="Digite o texto da alternativa...">
+        </ion-textarea>
+        <ion-checkbox 
+          slot="end" 
+          [(ngModel)]="questao.alternativas[i].correta"
+          [name]="'correta' + i">
+        </ion-checkbox>
+      </ion-item>
+      <ion-note>Marque como correta</ion-note>
+    </div>
 
-
-@for (alt of questao.alternativas; track $index) {
-<ion-item>
-<ion-label position="floating">Alternativa {{$index + 1}}</ion-label>
-<ion-input [(ngModel)]="questao.alternativas[$index]" name="alt{{$index}}"></ion-input>
-</ion-item>
-}
-</ion-list>
-
-
-<ion-item>
-<ion-label position="floating">Alternativa Correta (0 a 3)</ion-label>
-<ion-input type="number" [(ngModel)]="questao.alternativaCorreta" name="correta"></ion-input>
-</ion-item>
-
-
-<ion-item>
-<ion-label position="floating">Explicação</ion-label>
-<ion-textarea [(ngModel)]="questao.explicacao" name="explicacao"></ion-textarea>
-</ion-item>
-
-
-<ion-item>
-<ion-label>Dificuldade</ion-label>
-<ion-select [(ngModel)]="questao.dificuldade" name="dificuldade">
-<ion-select-option value="Fácil">Fácil</ion-select-option>
-<ion-select-option value="Médio">Médio</ion-select-option>
-<ion-select-option value="Difícil">Difícil</ion-select-option>
-</ion-select>
-</ion-item>
-
-
-<ion-item>
-<ion-label position="floating">Disciplina</ion-label>
-<ion-input [(ngModel)]="questao.disciplina" name="disciplina"></ion-input>
-</ion-item>
-
-
-<ion-button expand="block" type="submit" color="success">Salvar</ion-button>
-</form>
+    <!-- Botão Salvar -->
+    <ion-button 
+      expand="block" 
+      type="submit" 
+      color="success" 
+      [disabled]="!formValido()"
+      class="submit-button">
+      <ion-icon name="save" slot="start"></ion-icon>
+      Salvar Questão
+    </ion-button>
+  </form>
 </ion-content>
